--- a/views/cashreports/cashreports.ejs
+++ b/views/cashreports/cashreports.ejs
@@ -6,7 +6,7 @@
         </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="cashreport-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered custom-mobile-table" id="cashreport-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Report ID</th>
@@ -21,15 +21,6 @@
                 </thead>
                     
                 <tbody>
-                    <tr class="tr-hover">
-                        <td>1-0000001</td>
-                        <td>07/08/2023</td>
-                        <td>1</td>                                        
-                        <td>pos1</td>
-                        <td>Ralph Lauren Santos</td>                                           
-                        <td>gcash</td>       
-                        <td>ACTIVE</td>                    
-                    </tr>
                 </tbody>
             </table>
         </div>
