--- a/views/productprice/productprice.ejs
+++ b/views/productprice/productprice.ejs
@@ -6,7 +6,7 @@
         </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="productprice-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered custom-mobile-table" id="productprice-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Product Price Code</th>
