--- a/views/shiftreports/shiftreports.ejs
+++ b/views/shiftreports/shiftreports.ejs
@@ -6,7 +6,7 @@
         </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="shift-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered custom-mobile-table" id="shift-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th>Date</th>
