Added viewing sales items in modal

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -27,6 +27,22 @@
   
 }
 
+.modal{
+  margin-top: 50px !important;
+}
+
+.modal-lg {
+  max-width: 100%; /* Adjust this value to your desired width */
+}
+
+.modal-dialog{
+  max-width: 1000px !important;
+}
+
+.custom-modal-body{
+  margin: 1rem;
+}
+
 body {
   margin: 0px;
   padding: .8rem .8rem 0rem .8rem;
@@ -196,6 +212,10 @@ a {
 
 .text-white{
   color: var(--clr-font-white) !important;
+}
+
+.bmss-link-trigger {
+  cursor: pointer;
 }
 
 .responsive-wrap{
